@@ -572,7 +572,8 @@ static Ecore_Evas_Engine_Func _ecore_fb_engine_func =
      NULL,
      NULL, //transparent
 
-     NULL // render
+     NULL, // render
+     NULL  // screen_geometry_get
 };
 #endif
 
