@@ -198,3 +198,7 @@
         (_ecore_main_loop_iterate_internal). This fixes fd handler pending
         issue when ecore_idler callback adds ecore_job/event.
         * Ecore ecore_main.c: Refactoring _ecore_main_loop_iterate_internal().
+
+2011-05-27 Gustavo Sverzut Barbieri (k-s)
+
+	* Ecore_Evas: introduce ecore_evas_screen_geometry_get()
